--- a/ejercicio01.html
+++ b/ejercicio01.html
@@ -6,10 +6,9 @@
 <link rel="stylesheet" href="css/estilo.css"></style>
 </head>
 <body>
-<div id="numero">
+<div id="numero" ondblclick="duplica()" onmouseover="dentro()" onmouseout="fuera()" >
     5
 </div>
-enlazar fichero javascript script
 <script type="" src="js/ejercicio01.js"></script>
 </body>
 </html>
