--- a/ejercicio03.html
+++ b/ejercicio03.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+    
 <head>
     <meta charset=utf-8 />
     <title>Ejercicio 03 Usando event</title>
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div id="info"></div>
+    <div id="info" class="informationBox"></div>
     <script type="" src="js/ejercicio03.js"></script>
 </body>
 
